--- a/Advanced/resume-builder/src/pages/Authentication/Authentication.module.scss
+++ b/Advanced/resume-builder/src/pages/Authentication/Authentication.module.scss
@@ -2,11 +2,13 @@
 
 .container {
   background-color: $auth-background;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .authentication {
   height: 100vh;
-  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
